<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="small_hall">Small Hall</string>
	<string name="big_hall">Big Hall</string>

	<string name="app_name">Mobilization Schedule</string>
	<string name="schedule_details">Details</string>
	<string name="speeker_details">Speaker Details</string>

	<string name="update_schedule">Update schedule</string>
	<string name="credits">Credits</string>
	<string name="credits_author">Author:</string>
	<string name="credits_graphics">Graphics:</string>
	<string name="credits_tablet_layouts">Tablet layouts:</string>

	<string name="no_schedule">There is NO schedule yet</string>
	<string name="please_update">Please click "Menu" -> "Update schedule" \nor tap here</string>

	<string name="successfully_updated">Successfully updated</string>
	<string name="update_failed">Update FAILED:</string>
	<string name="update_failed_title">Update failed</string>

	<string name="where">Show me where</string>

	<string name="updating">Updating</string>
	<string name="updating_please_wait">Updating, please wait...</string>


	<string name="couldnt_connect_to_host">Could not connect to the server. Please check that you have networking enabled</string>
	<string name="settings">Settings</string>
</resources>
