<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="vertical" android:background="@color/bg" style="@android:style/Theme.NoTitleBar">
	<ImageView android:src="@drawable/logo" android:id="@+id/logo" android:layout_height="wrap_content"
		android:layout_width="fill_parent" />

	<LinearLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/big_hall"
			style="@style/button_pressed" android:id="@+id/big_hall_button" android:enabled="false" />
		<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/small_hall"
			style="@style/button_releassed" android:id="@+id/small_hall_button" />
	</LinearLayout>

	<ListView android:id="@android:id/list" android:layout_weight="1" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:background="@color/bg" android:cacheColorHint="@color/bg"></ListView>

	<LinearLayout android:id="@android:id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical">

		<TextView android:layout_height="wrap_content" style="@android:style/TextAppearance.Large"
			android:layout_width="wrap_content" android:id="@+id/when" android:text="@string/no_schedule" android:layout_gravity="center"
			android:layout_marginTop="30dip" />
		<TextView android:id="@+id/notify" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/please_update" android:layout_gravity="center" android:gravity="center"
			android:layout_marginTop="20dip" />
	</LinearLayout>

</LinearLayout>
